# ik_thermal_msgs

./: CMakeLists.txt  package.xml
msg/: ContactConfig.msg  TemperatureVector.msg
